; ModuleID = '/home/carl/AnghaBench/freebsd/sys/cddl/dev/extr_prototype.c_prototype_load.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/cddl/dev/extr_prototype.c_prototype_load.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@prototype_cdevsw = common dso_local global i32 0, align 4
@UID_ROOT = common dso_local global i32 0, align 4
@GID_WHEEL = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [17 x i8] c"dtrace/prototype\00", align 1
@prototype_cdev = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [10 x i8] c"prototype\00", align 1
@prototype_attr = common dso_local global i32 0, align 4
@DTRACE_PRIV_USER = common dso_local global i32 0, align 4
@prototype_pops = common dso_local global i32 0, align 4
@prototype_id = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @prototype_load to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @prototype_load(i8* %0) #0 {
  %2 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %3 = load i32, i32* @UID_ROOT, align 4
  %4 = load i32, i32* @GID_WHEEL, align 4
  %5 = call i32 @make_dev(i32* @prototype_cdevsw, i32 0, i32 %3, i32 %4, i32 384, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0))
  store i32 %5, i32* @prototype_cdev, align 4
  %6 = load i32, i32* @DTRACE_PRIV_USER, align 4
  %7 = call i64 @dtrace_register(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.1, i64 0, i64 0), i32* @prototype_attr, i32 %6, i32* null, i32* @prototype_pops, i32* null, i32* @prototype_id)
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %10

9:                                                ; preds = %1
  br label %10

10:                                               ; preds = %9, %1
  ret void
}

declare dso_local i32 @make_dev(i32*, i32, i32, i32, i32, i8*) #1

declare dso_local i64 @dtrace_register(i8*, i32*, i32, i32*, i32*, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
